packages/parser/test/parser/E0161.txt
try {} catch {}
===== err =====
anonymous:1:13: ParseError: E0161 - Expected try statement handler parameter declaration after `catch` keyword
1 | try {} catch {}
  |             ^
